Revision history for HTML::Forms

          - Adds tooltips
          - Adds password strength meter
          - Octal field type uses type validation
          - Builder role returns changed fields
          - Adds FormBuilder role
          - Adds boolean integer and ipaddress DS rendering widgets
          - Renderer supports serialising compound fields
          - Adds the add_handler field method
          - Unifies SelectOne and SelectMany apis
          - Adds SelectMany field type
          - Implments checkbox and radio groups auto_widget_size
          - Adds droplets form styling
          - Adds event to args of event handlers if arg is object
          - Default API endpoint changed
          - Version number fixes

0.2.100   2026-01-02 22:36:06
          - Improved make_handler signature
          - Improved styling for disabled DS fields
          - Moved LESS constants to wcom-05-constants.less
          - Added field autocomplete
          - Documentation updates
          - Better styling for data2markup output
          - Adds data2markup to utilities
          - Allows info to be placed above the field
          - Removes uses of innerHTML and most eval string in JS
          - Removes Repeatable field type. Use DataStructure
          - Added version numbers to LESS and JS
          - Fibonaci series for label widths
          - Implements Group in FE
          - CSS done for now
          - More CSS refactoring
          - CSS colour refactoring
          - Validated now checks for has_errors and has_error_results
          - Adds DS flex direction
          - Added settable icon height and width
          - Label alignment improvements in CSS
          - Links displayed as buttons get animation
          - Toggle code cleanup
          - Replaced maps with variables in CSS
          - Pixel aligned labels and input fields
          - Moved form messages after form info
          - Uses CSS grid for form layout